force-app/main/default/objects/All_Fields_Object__c/fields/creditcard__c.field-meta.xml
<CustomField>
    <fullName>creditcard__c</fullName>
    <label>creditcard</label>
    <length>20</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>