force-app/main/default/objects/All_Fields_Object__c/fields/CurrencyWith2Decimal__c.field-meta.xml
<CustomField>
    <fullName>CurrencyWith2Decimal__c</fullName>
    <label>CurrencyWith2Decimal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>