force-app/main/default/objects/All_Fields_Object__c/fields/DateField__c.field-meta.xml
<CustomField>
    <fullName>DateField__c</fullName>
    <label>DateField</label>
    <type>Date</type>
</CustomField>