force-app/main/default/objects/All_Fields_Object__c/fields/Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Formula_Field__c</fullName>
    <formula>DateField__c  + 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Field</label>
    <type>Date</type>
</CustomField>