force-app/main/default/objects/All_Fields_Object__c/fields/geolocation__c.field-meta.xml
<CustomField>
    <fullName>geolocation__c</fullName>
    <label>geolocation</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>