force-app/main/default/objects/All_Fields_Object__c/fields/geolocation_without_decimal__c.field-meta.xml
<CustomField>
    <fullName>geolocation_without_decimal__c</fullName>
    <label>geolocation without decimal</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>