force-app/main/default/objects/All_Fields_Object__c/fields/national_isurance__c.field-meta.xml
<CustomField>
    <fullName>national_isurance__c</fullName>
    <label>national isurance</label>
    <length>25</length>
    <maskChar>asterisk</maskChar>
    <maskType>nino</maskType>
    <type>EncryptedText</type>
</CustomField>