force-app/main/default/objects/All_Fields_Object__c/fields/percent__c.field-meta.xml
<CustomField>
    <fullName>percent__c</fullName>
    <label>percent</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>