force-app/main/default/objects/All_Fields_Object__c/fields/picklist_multi__c.field-meta.xml
<CustomField>
    <fullName>picklist_multi__c</fullName>
    <label>picklist multi</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Source_Detail</valueSetName>
    </valueSet>
</CustomField>