force-app/main/default/objects/All_Fields_Object__c/fields/socail_security__c.field-meta.xml
<CustomField>
    <fullName>socail_security__c</fullName>
    <label>socail security</label>
    <length>25</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>