force-app/main/default/objects/All_Fields_Object__c/fields/social_insurance__c.field-meta.xml
<CustomField>
    <fullName>social_insurance__c</fullName>
    <label>social insurance</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>sin</maskType>
    <type>EncryptedText</type>
</CustomField>