force-app/main/default/objects/All_Fields_Object__c/fields/text_area_long__c.field-meta.xml
<CustomField>
    <fullName>text_area_long__c</fullName>
    <label>text area long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>