force-app/main/default/objects/All_Fields_Object__c/fields/text_area_rich__c.field-meta.xml
<CustomField>
    <fullName>text_area_rich__c</fullName>
    <label>text area rich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>