force-app/main/default/objects/All_Fields_Object__c/fields/Text_encrypted__c.field-meta.xml
<CustomField>
    <fullName>Text_encrypted__c</fullName>
    <label>Text encrypted</label>
    <length>25</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>