force-app/main/default/objects/All_Fields_Object__c/fields/Text_encrypted_all_char__c.field-meta.xml
<CustomField>
    <fullName>Text_encrypted_all_char__c</fullName>
    <label>Text encrypted all char</label>
    <length>25</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>