force-app/main/default/objects/All_Fields_Object__c/fields/Time_Field__c.field-meta.xml
<CustomField>
    <fullName>Time_Field__c</fullName>
    <label>Time Field</label>
    <type>Time</type>
</CustomField>