force-app/main/default/objects/All_Fields_Object__c/fields/URL_Field__c.field-meta.xml
<CustomField>
    <fullName>URL_Field__c</fullName>
    <label>URL Field</label>
    <type>Url</type>
</CustomField>